:recycle: Refactoring background map rendering to be a plugin #298